--- a/index.html
+++ b/index.html
@@ -55,17 +55,10 @@
       </div>
       <div class="row">
         <div class="col-md-8 col-lg-9">
-          <p>Kristina Centore is a recent graduate of the MA program in Art History at the Tyler School of Art and
-            Architecture at Temple University and is based in Philadelphia, PA. Her current research interests include
-            the history of photography and the relationship of visual culture to art production between the United
-            States and the Soviet Union during the interwar years, as well as global modernisms during the Cold War era.
+          <p>Kristina Centore is an artist and recent graduate of the MA program in Art History at the Tyler School of Art and Architecture at Temple University. Her current research interests include histories of photography, industry, and the environment and their intersections with global modern and contemporary art.
           </p>
-          <p>Prior to attending Tyler, Centore received her BA in Visual Art from Rutgers University in New Brunswick,
-            NJ, where she was an active member of the city’s thriving DIY art and music community. Relocating to
-            Philadelphia shortly thereafter, Centore became a member of Space 1026, an art collective and gallery space,
-            where she maintained a studio practice and curated exhibitions.</p>
-          <p>Centore is always open to collaboration on projects involving research, art writing, archival work, and
-            exhibition planning.</p>
+          <p>Prior to attending Tyler, Centore received her BA in Visual Art from Rutgers University in New Brunswick, NJ, where she was an active member of the city’s DIY art and music community. Relocating to Philadelphia shortly thereafter, Centore became a member of Space 1026, an art collective and gallery space, where she maintained a studio practice and curated exhibitions.</p>
+          <p>Centore is based in Philadelphia, PA and is always open to collaboration on projects involving research, art writing, archival work, and exhibition planning.</p>
           <p>For more information, please contact kristinacentore@gmail.com.</p>
         </div>
         <div class="col-md-4 col-lg-3">
