updated bio, animation (stomp station link), writing (philly stewards)

--- a/animation.html
+++ b/animation.html
@@ -119,10 +119,8 @@
                 <div class="col-md-12 mt-5">
                     <h3 class="animation-h3" id="stomp-big">The Stop Motion Stomp Station</h3>
                     <h3 class="animation-h3" id="stomp-small">The Stop Motion<br>Stomp Station</h3>
-                    <p>The Stop Motion Stomp Station is a mobile workshop Centore developed to interactively teach the
-                        art of stop motion animation to the general public. It made appearances at Bartertown by artist
-                        Heather Hart at the DUMBO Arts Festival in 2012, 2013, and 2015, and Ladyfest Philadelphia in
-                        2013.</p>
+                    <p>The Stop Motion Stomp Station is a mobile workshop developed by Kristina Centore that enables members of the public to create their own stop motion animations. It made appearances at Bartertown by artist Heather Hart at the DUMBO Arts Festival in 2012, 2013, and 2015, and Ladyfest Philadelphia in 2013.</p>
+                    <p>Animations from The Stop Motion Stomp Station can be viewed at <a href="https://stopmotionstompstation.tumblr.com/" target="_blank">stopmotionstompstation.tumblr.com</a></p>
                 </div>
                 <div class="col-md-8 mb-3">
                     <img src="assets/images/Kristina_Centore_The_Stop_Motion_Stomp_Station_001.jpg"
