--- a/writing.html
+++ b/writing.html
@@ -93,6 +93,11 @@
                     <p>"Jino Rahimi," in <cite>Intersections</cite>, the Tyler School of Art and Architecture MFA
                         Catalogue (Philadelphia: Temple University, 2019).</p>
                 </div>
+                <div class="col-md-6 col-lg-4">
+                    <a href="https://www.phillystewards.art/legacy-blog/2017/6/14/puppet-adelphia" target="_blank"><img src="assets/images/philly-stewards.png"
+                            class="img-fluid border mb-2 mt-3" alt="Sequitur logo"></a>
+                    <p>“Puppet-Adelphia: A Visit to Spiral Q,” Philly Stewards, June 14, 2017.</p>
+                </div>
             </div>
         </div>
 
