--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       </div>
       <div class="row">
         <div class="col-md-8 col-lg-9">
-          <p>Kristina Centore is an artist and recent graduate of the MA program in Art History at the Tyler School of Art and Architecture at Temple University. Her current research interests include histories of photography, industry, and the environment and their intersections with global modern and contemporary art.
-          </p>
+          <p>Kristina Centore is an artist and recent graduate of the MA program in Art History at the Tyler School of Art and Architecture at Temple University. Her current research focuses on global modern and contemporary art within the context of industry and its relationship to the environment. She is especially interested in material histories of photography and time-based media and seeks to elevate the practices of artists from underrepresented backgrounds through her work.</p>
           <p>Prior to attending Tyler, Centore received her BA in Visual Art from Rutgers University in New Brunswick, NJ, where she was an active member of the city’s DIY art and music community. Relocating to Philadelphia shortly thereafter, Centore became a member of Space 1026, an art collective and gallery space, where she maintained a studio practice and curated exhibitions.</p>
           <p>Centore is based in Philadelphia, PA and is always open to collaboration on projects involving research, art writing, archival work, and exhibition planning.</p>
           <p>For more information, please contact kristinacentore@gmail.com.</p>
+          <p><a href="https://www.linkedin.com/in/kristinacentore/" target="_blank">LinkedIn</a></p>
         </div>
         <div class="col-md-4 col-lg-3">
           <img src="assets/images/kristina_centore_02.jpg" class="img-fluid kristina" alt="Picture of Kristina Centore">
