update link, header, and navbar styles

--- a/index.html
+++ b/index.html
@@ -16,30 +16,34 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
   <link rel="manifest" href="assets/images/favicon/site.webmanifest">
 
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=fallback" rel="stylesheet">
+
   <title>Kristina Centore</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-light">
+  <nav class="navbar navbar-expand-md navbar-light">
     <a class="navbar-brand" href="index.html">Kristina Centore</a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link green-link" href="index.html">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="curatorial.html">Curatorial Projects</a>
+          <a class="nav-link green-link" href="curatorial.html">Curatorial Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="writing.html">Writing</a>
+          <a class="nav-link green-link" href="writing.html">Writing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="animation.html">Animation</a>
+          <a class="nav-link green-link" href="animation.html">Animation</a>
         </li>
 
       </ul>
@@ -47,7 +51,7 @@
   </nav>
 
   <main>
-    <div class="container py-2">
+    <div class="container py-3">
       <div class="row">
         <div class="col-md-12">
           <h1>About</h1>
@@ -59,7 +63,7 @@
           <p>Prior to attending Tyler, Centore received her BA in Visual Art from Rutgers University in New Brunswick, NJ, where she was an active member of the city’s DIY art and music community. Relocating to Philadelphia shortly thereafter, Centore became a member of Space 1026, an art collective and gallery space, where she maintained a studio practice and curated exhibitions.</p>
           <p>Centore is based in Philadelphia, PA and is always open to collaboration on projects involving research, art writing, archival work, and exhibition planning.</p>
           <p>For more information, please contact kristinacentore@gmail.com.</p>
-          <p><a href="https://www.linkedin.com/in/kristinacentore/" target="_blank">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/kristinacentore/" target="_blank" class='green-link'>LinkedIn</a></p>
         </div>
         <div class="col-md-4 col-lg-3">
           <img src="assets/images/kristina_centore_02.jpg" class="img-fluid kristina" alt="Picture of Kristina Centore">
