--- a/animation.html
+++ b/animation.html
@@ -16,30 +16,34 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicon/site.webmanifest">
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=fallback" rel="stylesheet">
+
     <title>Animation</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light">
         <a class="navbar-brand" href="index.html">Kristina Centore</a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link green-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="curatorial.html">Curatorial Projects</a>
+                    <a class="nav-link green-link" href="curatorial.html">Curatorial Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="writing.html">Writing</a>
+                    <a class="nav-link green-link" href="writing.html">Writing</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="animation.html">Animation<span class="sr-only">(current)</span></a>
+                    <a class="nav-link green-link" href="animation.html">Animation<span class="sr-only">(current)</span></a>
                 </li>
 
             </ul>
@@ -47,7 +51,7 @@
     </nav>
 
     <main>
-        <div class="container py-2">
+        <div class="container py-3">
             <div class="row">
                 <div class="col-md-12">
                     <h1>Animation</h1>
@@ -97,7 +101,7 @@
                 </div>
 
 
-                <div class="col-md-12 mt-5">
+                <div class="col-md-12 mt-4">
                     <p class="mb-2"><cite>CAAT</cite>, 2011, video</p>
                 </div>
                 <div class="col-md-4">
@@ -120,7 +124,7 @@
                     <h3 class="animation-h3" id="stomp-big">The Stop Motion Stomp Station</h3>
                     <h3 class="animation-h3" id="stomp-small">The Stop Motion<br>Stomp Station</h3>
                     <p>The Stop Motion Stomp Station is a mobile workshop developed by Kristina Centore that enables members of the public to create their own stop motion animations. It made appearances at Bartertown by artist Heather Hart at the DUMBO Arts Festival in 2012, 2013, and 2015, and Ladyfest Philadelphia in 2013.</p>
-                    <p>Animations from The Stop Motion Stomp Station can be viewed at <a href="https://stopmotionstompstation.tumblr.com/" target="_blank">stopmotionstompstation.tumblr.com</a></p>
+                    <p>Animations from The Stop Motion Stomp Station can be viewed at <a href="https://stopmotionstompstation.tumblr.com/" target="_blank" class="green-link" id="no-border">stopmotionstompstation.tumblr.com</a></p>
                 </div>
                 <div class="col-md-8 mb-3">
                     <img src="assets/images/Kristina_Centore_The_Stop_Motion_Stomp_Station_001.jpg"
