update link style on curatorial

--- a/curatorial.html
+++ b/curatorial.html
@@ -57,18 +57,18 @@
                     <h1>Curatorial Projects</h1>
                 </div>
                 <div class="col-md-12">
-                    <p class="mb-0 lead">Layqa Nuna Yawar, <cite>Forever/Siempre</cite>, Space 1026, Philadelphia, PA
+                    <p class="mb-0 lead"><a href='https://layqa.info/' target='_blank' class='green-link-no-border'>Layqa Nuna Yawar</a>, <cite>Forever/Siempre</cite>, Space 1026, Philadelphia, PA
                         (November 2-23, 2018)</p>
                 </div>
             </div>
 
-            <div class="row" id="layqa">
+            <div class="row mb-5" id="layqa">
 
             </div>
             <hr>
             <div class="row">
                 <div class="col-md-12 mt-2">
-                    <p class="mb-0 lead">Marissa Paternoster, <cite>The Artist Need Not Suffer</cite>, Space 1026,
+                    <p class="mb-0 lead"><a href='https://www.marissapaternoster.com/' target='_blank' class='green-link-no-border'>Marissa Paternoster</a>, <cite>The Artist Need Not Suffer</cite>, Space 1026,
                         Philadelphia, PA (January 6-27, 2017)</p>
                 </div>
             </div>
