add stretched-link to puppet-adelphia

--- a/writing.html
+++ b/writing.html
@@ -136,7 +136,7 @@
                             alt="Spiral Q Puppet">
                         <div class="card-body">
                             <p class="card-text">“Puppet-Adelphia: A Visit to Spiral Q,” Philly Stewards, June 14, 2017.</p>
-                            <a href="https://www.phillystewards.art/legacy-blog/2017/6/14/puppet-adelphia" target="_blank"></a>
+                            <a class='stretched-link' href="https://www.phillystewards.art/legacy-blog/2017/6/14/puppet-adelphia" target="_blank"></a>
                         </div>
                     </div>
                 </div>
