update bio. css versioning

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css?v=1">
+  <link rel="stylesheet" href="assets/css/style.css?v=2">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
@@ -61,8 +61,7 @@
         <div class="col-md-8 col-lg-9">
           <p>Kristina Lynn Centore is an artist and recent graduate of the MA program in Art History at the Tyler School of Art and Architecture at Temple University. Her current research focuses on global modern and contemporary art within the context of industry and its relationship to the environment. She is especially interested in material histories of photography and time-based media and seeks to highlight the work of artists from underrepresented backgrounds.</p>
           <p>Prior to attending Tyler, Centore received her BA in Visual Art from Rutgers University in New Brunswick, NJ, where she was an active member of the city’s DIY art and music community. Relocating to Philadelphia shortly thereafter, Centore became a member of Space 1026, an art collective and gallery space, where she maintained a studio practice and curated exhibitions.</p>
-          <p>Centore is based in Philadelphia, PA and is always open to collaboration on projects involving research, art writing, archival work, and exhibition planning.</p>
-          <p>For more information, please contact kristinacentore@gmail.com.</p>
+          <p>Contact: kristinacentore@gmail.com</p>
           <p><a href="https://www.linkedin.com/in/kristinacentore/" target="_blank" class='green-link'>LinkedIn</a></p>
         </div>
         <div class="col-md-4 col-lg-3">
