--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="row">
         <div class="col-md-8 col-lg-9">
-          <p>Kristina Lynn Centore is an artist and recent graduate of the MA program in Art History at the Tyler School of Art and Architecture at Temple University. Her current research focuses on global modern and contemporary art within the context of industry and its relationship to the environment. She is especially interested in material histories of photography and time-based media and seeks to highlight the work of artists from underrepresented backgrounds.</p>
+          <p>Kristina Lynn Centore is an artist and recent graduate of the MA program in Art History at the Tyler School of Art and Architecture. She is currently working on a new video series and is interested in global modern and contemporary art as well as histories of photography and time-based media. She especially seeks to highlight the work of artists from underrepresented backgrounds in her research and writing.</p>
           <p>Prior to attending Tyler, Centore received her BA in Visual Art from Rutgers University in New Brunswick, NJ, where she was an active member of the city’s DIY art and music community. Relocating to Philadelphia shortly thereafter, Centore became a member of Space 1026, an art collective and gallery space, where she maintained a studio practice and curated exhibitions.</p>
           <p>Contact: kristinacentore@gmail.com</p>
           <p><a href="https://www.linkedin.com/in/kristinacentore/" target="_blank" class='green-link'>LinkedIn</a></p>
