--- a/animation.html
+++ b/animation.html
@@ -55,13 +55,6 @@
             <div class="row">
                 <div class="col-md-12">
                     <h1>Animation</h1>
-                    <p>Between 2008-2016, Centore maintained an art practice that consisted mainly of the production of
-                        stop-motion animated shorts. Harkening back to classic stop-motion techniques and taking
-                        inspiration from the work of Czech puppet animator Ji&rcaron;&iacute; Trnka, many of the
-                        satirical works that resulted are efforts to interrogate disparity and power by refocusing the
-                        visual language of Saturday morning cartoons. Through the use of claymation and the
-                        incorporation of found materials, the works play with scale and posit new ways of experiencing
-                        and thinking critically about everyday surroundings.</p>
                     <h3 class="animation-h3">Selected Animation Stills</h3>
                 </div>
 
@@ -123,7 +116,7 @@
                 <div class="col-md-12 mt-5">
                     <h3 class="animation-h3" id="stomp-big">The Stop Motion Stomp Station</h3>
                     <h3 class="animation-h3" id="stomp-small">The Stop Motion<br>Stomp Station</h3>
-                    <p>The Stop Motion Stomp Station is a mobile workshop developed by Kristina Centore that enables members of the public to create their own stop motion animations. It made appearances at Bartertown by artist Heather Hart at the DUMBO Arts Festival in 2012, 2013, and 2015, and Ladyfest Philadelphia in 2013.</p>
+                    <p>The Stop Motion Stomp Station is a mobile workshop developed by Kristina Centore that enables members of the public to create their own stop motion animations. It has made appearances at Barter Town—a project by artist Heather Hart at the DUMBO Arts Festival—in 2012, 2013, and 2015, and at Ladyfest Philadelphia in 2013.</p>
                     <p>Animations from The Stop Motion Stomp Station can be viewed at <a href="https://stopmotionstompstation.tumblr.com/" target="_blank" class="green-link-no-border" >stopmotionstompstation.tumblr.com</a></p>
                 </div>
                 <div class="col-md-8 mb-3">
