update bio, add instagram link

--- a/index.html
+++ b/index.html
@@ -59,11 +59,15 @@
       </div>
       <div class="row">
         <div class="col-md-8 col-lg-9">
-          <p>Kristina Lynn Centore is a writer, artist, and graduate of the MA program in Art History at the Tyler School of Art and Architecture. Centore is interested in modern and contemporary art and media, with emphasis on twentieth- and twenty-first-century art in Egypt.</p>
-          <p>Prior to attending Tyler, Centore received her BA in Visual Art from Rutgers University. She has previously been a member of the art collective Space 1026, where she maintained a studio practice and curated exhibitions.</p>
-          <p>Centore is currently based in Philadelphia, PA, located on the land of the Lenni Lenape people.</p>
+          <p>Kristina Lynn Centore is a graduate of the M.A. program in Art History at the Tyler School of Art and Architecture, Temple University. She additionally holds a B.A. in Visual Art from Rutgers University.</p>
+          <p>As a museum professional committed to connecting art with the public, Kristina specializes in modern and contemporary art and visual culture in global contexts. In particular, her interests include printmaking, photography, performance, and mixed-media installations. She is also drawn to painting practices that complicate the Cold War opposition of abstraction to social realism.</p>
+          <p>In previous years, Kristina was a member of the art collective Space 1026, where she maintained a studio practice and curated exhibitions.</p>
+          <p>Kristina resides in Philadelphia, PA, a city located on Lenni Lenape land.</p>
           <p>Contact: kristinacentore@gmail.com</p>
-          <p><a href="https://www.linkedin.com/in/kristinacentore/" target="_blank" class='green-link'>LinkedIn</a></p>
+          <p>
+            <a href="https://www.linkedin.com/in/kristinacentore/" target="_blank" class='green-link mr-1'>LinkedIn</a>
+            <a href="https://www.instagram.com/kc_centauri/" target="_blank" class='green-link'>Instagram</a>
+          </p>
         </div>
         <div class="col-md-4 col-lg-3">
           <img src="assets/images/kristina_centore_03.jpg" class="img-fluid kristina" alt="Picture of Kristina Centore">
