update colors and bio

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       </div>
       <div class="row">
         <div class="col-md-8 col-lg-9">
-          <p>Kristina Lynn Centore is a graduate of the M.A. program in Art History at the Tyler School of Art and Architecture, Temple University. She additionally holds a B.A. in Visual Art from Rutgers University.</p>
-          <p>As a museum professional committed to connecting art with the public, Kristina specializes in modern and contemporary art and visual culture in global contexts. In particular, her interests include printmaking, photography, performance, and mixed-media installations. She is also drawn to painting practices that complicate the Cold War opposition of abstraction to social realism.</p>
-          <p>In previous years, Kristina was a member of the art collective Space 1026, where she maintained a studio practice and curated exhibitions.</p>
+          <p>Kristina Lynn Centore (she/her/hers) is an art historian and museum professional committed to connecting artists' ideas with the public. She is a graduate of the M.A. program in Art History at the Tyler School of Art and Architecture, Temple University and received her B.A. in Visual Art from Rutgers, The State University of New Jersey.</p>
+          <p>Kristina researches global modern and contemporary art and design. She focuses on work by SWANA (Southwest Asian and North African) artists and has a broad interest in Indigenous art practices.</p>
+          <p>Previously, Kristina was an artist-member of the collective Space 1026, where she also curated exhibitions.</p>
           <p>Kristina resides in Philadelphia, PA, a city located on Lenni Lenape land.</p>
           <p>Contact: kristinacentore@gmail.com</p>
           <p>
