--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       </div>
       <div class="row">
         <div class="col-md-8 col-lg-9">
-          <p>Kristina Lynn Centore (she/her/hers) is an art historian and museum professional committed to connecting artists' ideas with the public. She is a graduate of the M.A. program in Art History at the Tyler School of Art and Architecture, Temple University and received her B.A. in Visual Art from Rutgers, The State University of New Jersey.</p>
-          <p>Kristina researches global modern and contemporary art and design. She focuses on work by SWANA (Southwest Asian and North African) artists and has a broad interest in Indigenous art practices.</p>
+          <p>Kristina Lynn Centore (she/her) is an art historian and museum professional committed to connecting artists' ideas with the public. She is a graduate of the M.A. program in Art History at the Tyler School of Art and Architecture, Temple University and received her B.A. in Visual Art from Rutgers, The State University of New Jersey.</p>
+          <p>Kristina researches global modern and contemporary art and design. She focuses on work by SWANA (Southwest Asian and North African) artists and has a broad interest in Indigenous art practices. Additionally, she is always ready to take a deep dive into the history and theory of photography, the environmental humanities, craft in contemporary art, performance, and anything related to the Non-Aligned Movement.</p>
           <p>Previously, Kristina was an artist-member of the collective Space 1026, where she also curated exhibitions.</p>
           <p>Kristina resides in Philadelphia, PA, a city located on Lenni Lenape land.</p>
           <p>Contact: kristinacentore@gmail.com</p>
